# dirconcat

./: .project  dirconcat.cabal
src/: Main.hs
test-suite/: DirConcatSpec.hs
