name:                dirconcat
version:             0.1.0.0
synopsis:            concats multiple dirs to one
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Evgeny Pashkin
maintainer:          epashkin@cognitive.ru
-- copyright:           
category:            utility
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      library
  default-language:    Haskell2010
  exposed-modules:     DirConcat

executable dirconcat
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite hspec
  build-depends:       base, dirconcat, hspec == 1.8.*
  default-language:    Haskell2010
  hs-source-dirs:      test-suite
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
